--- a/JS4React/index.html
+++ b/JS4React/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css"
-    <title>  </title>
+    <link rel="stylesheet" href="index.css">
+    <title> JS para React </title> 
 </head>
 <body>
     
-    <script type="modul"src="index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
